# qai-appbuilder

./: setup.py
pybind/: common.h
samples/python/stable_diffusion_v3_5/: stable_diffusion_v3_5.py
script/qai_appbuilder/: __init__.py  qnncontext.py
src/: CMakeLists.txt  LibAppBuilder.cpp  QnnInferenceEngine.cpp  QnnInferenceEngine.hpp  QnnSampleApp.cpp  main.cpp
src/SVC/: CMakeLists.txt  main.cpp
src/SVC/Utils/: ShareMem.hpp  Utils.hpp
src/SVC/ipc/: IpcChannel.hpp  Platform.hpp  SharedRegion.hpp  SvcProcess.hpp
src/Utils/: BuildId.hpp  DynamicLoadUtil.cpp  DynamicLoadUtil.hpp  IOTensor.cpp  IOTensor.hpp  QnnAppUtils.cpp  QnnAppUtils.hpp  QnnDlcUtils.cpp  QnnDlcUtils.hpp
tools/skills/qai-runner-skill/: README.md  SKILL.md
tools/skills/qai-runner-skill/assets/: aipc_AGENTS.md  aipc_plan.md
tools/skills/qai-runner-skill/references/: host_context_binary_gen.md  inference.md  model_export_validation.md  on_device_context_binary.md  profiling.md  qnn_conversion.md  troubleshooting.md
tools/skills/qai-runner-skill/scripts/: aipc_convert_fp.py  aipc_convert_int.py  aipc_preflight_check.py  aipc_qairt_devinfo.ps1  convert_qnn_to_trace.py  onnxwrapper.py  onnxwrapper_x86.py
